<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/edtusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Felhasználónév"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Jelszó"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="register"
            android:text="Regisztráció"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnGoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="navigate_to_login"
            android:text="Bejelentkezés"
            android:layout_marginTop="8dp"
            tools:ignore="OnClick" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
